fix(navdrawer): fix broken layout

--- a/src/components/nav-drawer/themes/light/nav-drawer-item.base.scss
+++ b/src/components/nav-drawer/themes/light/nav-drawer-item.base.scss
@@ -5,7 +5,6 @@ $theme: $material;
 $active-text-color: var(--active-text-color, color(primary, 500)) !default;
 $active-background: var(--active-background, color(primary, 500, .12)) !default;
 $hover-background: var(--hover-background, color(gray, 200, .8)) !default;
-$item-margin: rem(8px);
 
 :host {
     @include css-vars-from-theme($theme, 'ig-nav-drawer');
@@ -20,14 +19,13 @@ $item-margin: rem(8px);
     position: relative;
     color: color(gray, 700);
     max-height: rem(48px);
-    margin: #{$item-margin};
+    margin: rem(8px);
     padding: rem(12px) rem(8px);
     cursor: pointer;
     user-select: none;
     outline: transparent;
     white-space: nowrap;
     text-decoration: none;
-    width: calc(100% - #{$item-margin * 2});
     border: none;
     justify-content: flex-start;
     transition: background .15s ease-out;
